# src/routes/api/posts.ts
@@ -6,21 +6,35 @@ import {
   getPost,
   filterPostsByKeyword,
   getKeywordsByPost,
+  createPost,
 } from '../../controllers';
 
 const debug = makeDebug('app:api/posts');
 const router = express.Router();
 
-router.route('/').get((req, res) => {
-  if (req.query?.keyword) {
-    const keywords = [req.query.keyword].flat();
-    const postIds = filterPostsByKeyword(keywords);
+router
+  .route('/')
+  .get((req, res) => {
+    if (req.query?.keyword) {
+      const keywords = [req.query.keyword].flat();
+      const postIds = filterPostsByKeyword(keywords);
 
-    res.json(describeAllPosts().filter((p) => postIds.includes(p.id)));
-  } else {
-    res.json(describeAllPosts());
-  }
-});
+      res.json(describeAllPosts().filter((p) => postIds.includes(p.id)));
+    } else {
+      res.json(describeAllPosts());
+    }
+  })
+  .post((req, res) => {
+    const { title, description } = req.body;
+
+    if (!title) {
+      res.sendStatus(400);
+    }
+
+    const info = createPost({ title, description });
+    debug(info);
+    res.sendStatus(201);
+  });
 
 router.route('/:id').get((req, res) => {
   const { id } = req.params;
